--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "expres": "^0.0.5",
     "express": "^4.18.2",
     "mongoose": "^7.4.1",
     "nodemon": "^3.0.1"
   },
-  "devDependencies": {},
   "description": ""
 }
